# ipfs-lookup-measurement

./: .gitignore  down.sh  main.tf  run.sh  up.sh
analysis/: 2022-11-21-ignoring-hydras-analysis.ipynb  2022-11-28-hydra-dial-down.ipynb  2022-12-15-demo-day.ipynb  2023-01-16-gala-nodes.ipynb  2023-01-24-ignore-gala-nodes.ipynb  2023-01-25-gala-comparison.ipynb  2023-01-27-lookup-script-adin.ipynb  2023-02-02-gala-comparison.ipynb  2023-02-20-hydra-post-gala.ipynb  2023-03-01-analysis.ipynb  2023-03-07-analysis.ipynb  lib_agent.py  lib_constants.py  lib_db.py  lib_log_parse.py  lib_log_parse_test.py  lib_utils.py  model_add_provider_query.py  model_find_node_query.py  model_get_providers_query.py  model_loader.py  model_log_file.py  model_log_file_test.py  model_log_line.py  model_log_line_test.py  model_publication.py  model_retrieval.py  nb_exec_summary.ipynb  pyproject.toml
controller/cmd/agent/: agent.go
data/: adins-script-find-times.csv  find-times.csv
data/2023-03-07_plain/: df_publications_dict_map.p
download/: download_logs.py  download_logs.sh  transform.py
testing_node/: testing_node.tf
