[tool.poetry]
name = "ipfs-lookup-measurement-analysis"
version = "0.1.0"
description = ""
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
durationpy = "^0.5"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
latex = "^0.7.0"
jupyter = "^1.0.0"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
